deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gottafetchthemall
  namespace: poke
  labels:
    app: poke-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poke-api
  template:
    metadata:
      labels:
        app: poke-api
    spec:
      containers:
      - name: gottafetchthemall
        image: poke-image
        imagePullPolicy: Always
        ports:
        - containerPort: 8128
      imagePullSecrets:
      - name: docker-login
