deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gottafetchthemall-service
  namespace: poke
spec:
  selector:
    app: gottafetchthemall
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8128
