deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gottafetchthemall-ingress
  namespace: poke
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: a74699ba050ff4d589ff0a4507afe82d-585196317.eu-west-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gottafetchthemall-service
            port:
              number: 80
